Build is 1.4.2... use ugly method
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc5.5.x/trunk@992411 13f79535-47bb-0310-9956-ffa450edef68